mkukucka-covid19-testing-administration/covid19-testing-administration-webapi/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: covid19-testing-administration-webapi
spec:
  type: ClusterIP
  selector:
    pod: covid19-testing-administration-webapi-label
  ports:
  - name: webapi-s-port
    protocol: TCP
    port: 80
    targetPort: 8080
